--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
     environment:
       BUILD_PLAN: nightly-2018-10-23
       JOBS: 9
-      FLAKY_PKGS: "" # "--flaky threads --flaky lifted-async --flaky fsnotify-conduit --flaky hspec-core --flaky stm-delay"
+      FLAKY_PKGS: "cuda" # "--flaky threads --flaky lifted-async --flaky fsnotify-conduit --flaky hspec-core --flaky stm-delay"
       HISTORY_LENGTH: 16
     steps:
       - checkout
